[project]
name = "checking"
requires-python = ">= 3.12"

dependencies = [
    "attrs>=23.1.0"
]

[project.optional-dependencies]
numpy = ["numpy>=1.26.0"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["_base_checker.py"]

[tool.ruff.lint]
select = ["E", "F"]